# spdb

./: .gitattributes  .gitignore  README.md  aggregate_functions.ipynb  docker-compose.yml  run_stress_tests.sh
docs/: data-desc.md  data.md  environment.md  how-to.md  tests.md
postgis/: Dockerfile  docker-entrypoint.sh  spdb_warsaw.sql
postgis/data/: warszawa.osm.pbf
python/: Dockerfile  aggregate_functions.ipynb  distance_relations_tests.ipynb  main.py  pyproject.toml  spatial_joins.ipynb  stress_tests.ipynb  topological_relations.ipynb  visualize.py  warszawa.geojson
python/.ipynb_checkpoints/: Dockerfile-checkpoint
python/stress_tests/: run_stress_test.sh  run_stress_test_geopandas.sh  stress_test_geopandas.py  stress_test_postgis.py
