[tool.poetry]
name = "spatial-project"
version = "0.1.0"
description = "Python GIS environment with GeoPandas and psycopg2"
authors = ["Filip Budzynski", "Dawid Budzynski"]

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
psycopg2 = "^2.9"
shapely = "^2.1.1"
pyproj = "^3.6"
rtree = "^1.2"
matplotlib = "^3.8"
jupyterlab = "^4.0"
jupyter = "^1.1.1"
sqlalchemy = "^2.0.40"
pyogrio = "^0.10.0"
pyarrow = "^19.0.1"
notebook = "^7.4.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
